[UBSan] dom/Document.cpp:2722:23: runtime error: reference binding to null pointer of type 'JSC::CallFrame' https://bugs.webkit.org/show_bug.cgi?id=223642

Reviewed by Darin Adler.

Use a raw pointer instead of a reference for the JSC::CallFrame and null check it to make sure
the code is safe and its behavior is defined.

* dom/Document.cpp:
(WebCore::Document::shouldBypassMainWorldContentSecurityPolicy const):


Canonical link: https://commits.webkit.org/235670@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274895 268f45cc-cd09-0410-ab3c-d52691b4dbfc